# npos-node

./: Cargo.toml
node/bench/: Cargo.toml
node/cli/: Cargo.toml
node/cli/benches/: block_production.rs  executor.rs  transaction_pool.rs
node/cli/src/: chain_spec.rs  lib.rs  service.rs
node/executor/: Cargo.toml
node/inspect/: Cargo.toml
node/inspect/src/: command.rs
node/primitives/: Cargo.toml
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs
node/testing/: Cargo.toml
node/testing/src/: bench.rs  client.rs  genesis.rs  keyring.rs
pallet/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: config.rs  lib.rs
scripts/: build.sh  start_multi_node.sh
scripts/session_keys/: keys.sh  run.sh
