[package]
name = "node-primitives"
version = "2.0.0"
authors = ["Immanuel John"]
description = "Substrate-clarus node low-level primitives."
license = "Unlicense"
homepage = "https://github.com/immanuel-unit/npos-node.git"
repository = "https://github.com/immanuel-unit/npos-node.git"
edition = "2021"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}

[features]
default = [ "std" ]
std = [ "sp-core/std", "sp-runtime/std", ]

